adding featured section

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
       </nav>
     </header>
     <main>
+      <!-- Hero Section Start -->
+
       <section class="section-hero">
         <div class="hero">
           <div class="hero-text-box">
@@ -68,6 +70,34 @@
           </div>
         </div>
       </section>
+
+      <!-- Hero Section End -->
+
+      <!-- Featured in Section Start -->
+
+      <section class="section-featured">
+        <div class="container">
+          <h2 class="heading-featured-in">As featured in</h2>
+          <div class="logos">
+            <img src="img/logos/techcrunch.png" alt="Techcrunch logo" />
+            <img
+              src="img/logos/business-insider.png"
+              alt="Business Insider Logo"
+            />
+            <img
+              src="img/logos/the-new-york-times.png"
+              alt="The New York Times logo"
+            />
+            <img src="img/logos/forbes.png" alt="Forbes logo" />
+            <img src="img/logos/usa-today.png" alt="USA Today logo" />
+          </div>
+        </div>
+      </section>
+
+      <!-- Featured in Section End -->
+
+      <!-- How it works Section Start -->
+
       <section class="section-how">
         <div class="container">
           <span class="subheading">How it works</span>
@@ -132,6 +162,8 @@
           </div>
         </div>
       </section>
+
+      <!-- How it works Section Start -->
     </main>
   </body>
 </html>
