--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="description"
+      content="Omnifood is an AI-powered food subscription that will make you eat healthy again, 365 days per year. It's tailored to your personal tastes and nutritional needs."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="icon" href="img/favicon.png" />
+    <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
+    <link rel="manifest" href="manifest.webmanifest" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,17 +24,19 @@
     <title>OmniFood</title>
   </head>
   <body>
-    <header class="header nav-open">
+    <header class="header">
       <a href="#">
-        <img src="/img/omnifood-logo.png" alt="OmniFood logo" class="logo" />
+        <img src="img/omnifood-logo.png" alt="OmniFood logo" class="logo" />
       </a>
       <nav class="main-nav">
         <ul class="main-nav-list">
-          <li><a href="#" class="main-nav-link">How it works</a></li>
-          <li><a href="#" class="main-nav-link">Meals</a></li>
-          <li><a href="#" class="main-nav-link">Testimonials</a></li>
-          <li><a href="#" class="main-nav-link">Pricing</a></li>
-          <li><a href="#" class="main-nav-link nav-cta">Try for free</a></li>
+          <li><a href="#how" class="main-nav-link">How it works</a></li>
+          <li><a href="#meals" class="main-nav-link">Meals</a></li>
+          <li>
+            <a href="#testimonials" class="main-nav-link">Testimonials</a>
+          </li>
+          <li><a href="#pricing" class="main-nav-link">Pricing</a></li>
+          <li><a href="#cta" class="main-nav-link nav-cta">Try for free</a></li>
         </ul>
       </nav>
       <button class="btn-mobile-nav">
@@ -43,16 +53,15 @@
             <h1 class="heading-primary">
               A healthy meal delivered to your door, every single day
             </h1>
-
             <p class="hero-description">
               The smart 365-days-per-year food subscription that will make you
               eat healthy again. Tailored to your personal tastes and
               nutritional needs.
             </p>
-            <a href="#" class="btn btn--full margin-right-sm"
+            <a href="#cta" class="btn btn--full margin-right-sm"
               >Start eating well</a
             >
-            <a href="#" class="btn btn--outline">Learn more &darr;</a>
+            <a href="#how" class="btn btn--outline">Learn more &darr;</a>
             <div class="delivered-meals">
               <div class="delivered-imgs">
                 <img src="img/customers/customer-1.jpg" alt="Customer photo" />
@@ -63,17 +72,21 @@
                 <img src="img/customers/customer-6.jpg" alt="Customer photo" />
               </div>
               <p class="delivered-text">
-                We have delivered <span>250,000+</span> meals last year!
+                <span>250,000+</span> meals delivered last year!
               </p>
             </div>
           </div>
-
           <div class="hero-img-box">
-            <img
-              src="img/hero.png"
-              alt=" Women enjoying food, meals in storage container and food bowls on a table"
-              class="hero-img"
-            />
+            <picture>
+              <source srcset="img/hero.webp" type="image/webp" />
+              <source srcset="img/hero-min.png" type="image/png" />
+
+              <img
+                src="img/hero-min.png"
+                class="hero-img"
+                alt="Woman enjoying food, meals in storage container, and food bowls on a table"
+              />
+            </picture>
           </div>
         </div>
       </section>
@@ -105,7 +118,7 @@
 
       <!-- How it works Section Start -->
 
-      <section class="section-how">
+      <section class="section-how" id="how">
         <div class="container">
           <span class="subheading">How it works</span>
           <h2 class="heading-secondary">
@@ -174,7 +187,7 @@
 
       <!-- Meals and Diets Section Start -->
 
-      <section class="section-meals">
+      <section class="section-meals" id="meals">
         <div class="container center-text">
           <span class="subheading">Meals</span>
           <h2 class="heading-secondary">
@@ -294,7 +307,7 @@
 
       <!-- Testimonials Section Starts -->
 
-      <section class="section-testimonials">
+      <section class="section-testimonials" id="testimonials">
         <div class="testimonials-container">
           <span class="subheading">Testimonials</span>
           <h2 class="heading-secondary">Once you try it, you can't go back</h2>
@@ -432,7 +445,7 @@
 
       <!-- Pricing Section Starts -->
 
-      <section class="section-pricing">
+      <section class="section-pricing" id="pricing">
         <div class="container">
           <span class="subheading">Pricing</span>
           <h2 class="heading-secondary">
@@ -496,7 +509,7 @@
               <a href="#" class="btn btn--full">Start eating well</a>
             </div>
           </div>
-          <!-- !  -->
+          <!--   -->
         </div>
         <div class="container grid">
           <p class="plan-details">
@@ -544,7 +557,7 @@
 
       <!-- CTA Section Starts -->
 
-      <section class="section-cta">
+      <section class="section-cta" id="cta">
         <div class="container">
           <div class="cta">
             <div class="cta-text-box">
@@ -554,45 +567,50 @@
                 eating well today. You can cancel or pause anytime. And the
                 first meal is on us!
               </p>
+
               <form class="cta-form" action="#">
                 <div>
                   <label for="full-name">Full Name</label>
                   <input
                     id="full-name"
                     type="text"
-                    placeholder="Jhon Smith"
-                    name="fullname"
+                    placeholder="John Smith"
                     required
                   />
                 </div>
+
                 <div>
                   <label for="email">Email address</label>
                   <input
                     id="email"
                     type="email"
                     placeholder="me@example.com"
-                    name="name"
                     required
                   />
                 </div>
+
                 <div>
                   <label for="select-where">Where did you hear from us?</label>
-                  <select name="select-where" id="select-where" required>
+                  <select id="select-where" required>
                     <option value="">Please choose one option:</option>
-                    <option value="frinds">Friends and family</option>
-                    <option value="youtube">Youtube video</option>
-                    <option value="pdacast">Podacast</option>
+                    <option value="friends">Friends and family</option>
+                    <option value="youtube">YouTube video</option>
+                    <option value="podcast">Podcast</option>
                     <option value="ad">Facebook ad</option>
                     <option value="others">Others</option>
                   </select>
                 </div>
+
                 <button class="btn btn--form">Sign up now</button>
+
+                <!-- <input type="checkbox" />
+                <input type="number" /> -->
               </form>
             </div>
             <div
               class="cta-img-box"
               role="img"
-              aria-label="Women enjoying food"
+              aria-label="Woman enjoying food"
             ></div>
           </div>
         </div>
@@ -604,11 +622,7 @@
       <div class="container grid grid--footer">
         <div class="logo-col">
           <a href="#" class="footer-logo">
-            <img
-              src="/img/omnifood-logo.png"
-              alt="OmniFood logo"
-              class="logo"
-            />
+            <img src="img/omnifood-logo.png" alt="OmniFood logo" class="logo" />
           </a>
           <ul class="social-links">
             <li>
@@ -628,7 +642,8 @@
             </li>
           </ul>
           <p class="copyright">
-            Copyright &copy; 2027 by Omnifood. Inc. All rights reserved.
+            Copyright &copy; <span class="year"></span> by Omnifood. Inc. All
+            rights reserved.
           </p>
         </div>
         <div class="address-col">
@@ -682,5 +697,6 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <script src="js/script.js" defer></script>
   </body>
 </html>
